--- a/login.html
+++ b/login.html
@@ -13,6 +13,7 @@
       </div>
       <div class="form-group">
         <input type="password" id="password" placeholder="Enter your password">
+        <p id="caps-lock-notify">Caps Lock is ON !</p>
       </div>
       <div class="form-group">
         <div class="button-group">
@@ -23,7 +24,18 @@
     </form>
   </div>
   
-  
+  <script>
+    var passwordField = document.getElementById("password")
+    var capsLockTextSpan = document.getElementById("caps-lock-notify")
+
+    passwordField.addEventListener("keyup", (event) => {
+      if (event.getModifierState("CapsLock")) {
+        capsLockTextSpan.style.display = "block";
+      } else {
+        capsLockTextSpan.style.display = "none"
+      }
+    })
+  </script>  
 
 </body>
 </html>
